enable spell casing via BattleAI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -287,6 +287,7 @@ message(STATUS "MMAI target_link_libraries: ${MMAI_LIBS}")
 target_link_libraries(MMAI PRIVATE ${MMAI_LIBS})
 message(STATUS "MMAI target_link_libraries: ${_nonforce_libs}")
 target_link_libraries(MMAI PRIVATE ${_nonforce_libs})
+target_link_libraries(MMAI PRIVATE BattleAI)  # for spell casting
 
 target_link_options(MMAI PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/VERBOSE:LIB>)
 
