try linking android against c++_shared

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,6 +221,8 @@ elseif(MMAI_LIBTORCH_PATH)
     # Found in system SDK, somewhere in `xcrun --sdk iphoneos --show-sdk-path`
     find_library(ACCELERATE Accelerate)
     list(APPEND MMAI_LIBS "${ACCELERATE}")
+  elseif(ANDROID)
+    list(APPEND MMAI_LIBS c++_shared)
   endif()
 
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
