coreml success on mac; SEE NOTE
tested with model: defender-tukbajrv-202509171940-coreml

NOTE: this needs executorch-0.7.0 compiled with the following CMakeUserPresets
      (possibly many of the toggles can still be OFF, but this works for sure)

{
    "version": 10,
    "$comment": [
        "This file is used for compiling executorch from source and",
        "must be copied into the executorch root dir.",
        "See comments in MMAI/CMakeLists.txt for more info."
    ],
    "configurePresets": [
        {
            "name": "mmai-executorch-common",
            "hidden": true,
            "generator": "Unix Makefiles",
            "cacheVariables": {
                "CMAKE_OSX_DEPLOYMENT_TARGET": "11.0",
                "EXECUTORCH_ENABLE_PROGRAM_VERIFICATION": "ON",
                "EXECUTORCH_BUILD_SIZE_TEST": "OFF",
                "EXECUTORCH_OPTIMIZE_SIZE": "OFF",
                "EXECUTORCH_BUILD_COREML": "ON",
                "EXECUTORCH_BUILD_ARM_BAREMETAL": "OFF",
                "EXECUTORCH_BUILD_KERNELS_CUSTOM": "ON",
                "EXECUTORCH_BUILD_KERNELS_CUSTOM_AOT": "ON",
                "EXECUTORCH_BUILD_KERNELS_QUANTIZED_AOT": "ON",
                "EXECUTORCH_BUILD_EXTENSION_DATA_LOADER": "ON",
                "EXECUTORCH_BUILD_EXTENSION_FLAT_TENSOR": "ON",
                "EXECUTORCH_BUILD_EXTENSION_LLM": "OFF",
                "EXECUTORCH_BUILD_EXTENSION_MODULE": "ON",
                "EXECUTORCH_BUILD_EXTENSION_RUNNER_UTIL": "ON",
                "EXECUTORCH_BUILD_EXTENSION_TENSOR": "ON",
                "EXECUTORCH_BUILD_EXTENSION_TRAINING": "OFF",
                "EXECUTORCH_BUILD_EXTENSION_APPLE": "OFF",
                "EXECUTORCH_BUILD_MPS": "ON",
                "EXECUTORCH_BUILD_NEURON": "OFF",
                "EXECUTORCH_BUILD_OPENVINO": "OFF",
                "EXECUTORCH_BUILD_PYBIND": "OFF",
                "EXECUTORCH_BUILD_QNN": "OFF",
                "EXECUTORCH_BUILD_KERNELS_OPTIMIZED": "ON",
                "EXECUTORCH_B

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,16 +189,37 @@ if(MMAI_EXECUTORCH_PATH)
 
   set(_force_libs
     xnnpack_backend
+    coremldelegate
     optimized_kernels
     quantized_kernels
     portable_ops_lib
   )
 
-  set(_nonforce_libs ${EXECUTORCH_LIBRARIES})
+  # XXX: not sure if ALL of these are needed for CoreML models
+  find_library(COREML_FRAMEWORK CoreML)
+  find_library(FOUNDATION_FRAMEWORK Foundation)
+  find_library(COREFOUNDATION_FRAMEWORK CoreFoundation)
+  find_library(ACCELERATE_FRAMEWORK Accelerate)
+  find_library(METAL_FRAMEWORK Metal)
+  find_library(MPS_FRAMEWORK MetalPerformanceShaders)
+
+  set(_nonforce_libs
+    ${EXECUTORCH_LIBRARIES}
+    ${COREML_FRAMEWORK}
+    ${FOUNDATION_FRAMEWORK}
+    ${COREFOUNDATION_FRAMEWORK}
+    ${ACCELERATE_FRAMEWORK}
+    ${METAL_FRAMEWORK}
+    ${MPS_FRAMEWORK}
+    sqlite3
+  )
   list(REMOVE_ITEM _nonforce_libs ${_force_libs})
 
   message(STATUS "_force_libs: ${_force_libs}")
   message(STATUS "_nonforce_libs: ${_nonforce_libs}")
+
+
+
 elseif(MMAI_LIBTORCH_PATH)
   #[[
   About Path to libtorch install director:
@@ -291,6 +312,11 @@ target_link_libraries(MMAI PRIVATE ${_nonforce_libs})
 target_link_libraries(MMAI PRIVATE BattleAI)  # for spell casting
 
 target_link_options(MMAI PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/VERBOSE:LIB>)
+
+# 3) Make sure Obj-C categories in static libs are loaded.
+# Either of the following usually works; use the first if possible:
+target_link_options(MMAI PRIVATE -ObjC)
+
 
 # Used in schema/base.h to determine if it is imported by MMAI or vcmi-gym
 set_target_properties(MMAI PROPERTIES COMPILE_DEFINITIONS "MMAI_DLL=1")
