fix linking c++ for android (try shared again)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -249,6 +249,7 @@ if(MMAI_EXECUTORCH_PATH)
     )
   elseif(ANDROID)
     list(APPEND _force_libs vulkan_backend)
+    list(APPEND MMAI_LIBS c++_shared)
   endif()
 
   list(REMOVE_ITEM _nonforce_libs ${_force_libs})
@@ -278,7 +279,7 @@ elseif(MMAI_LIBTORCH_PATH)
     find_library(ACCELERATE Accelerate)
     list(APPEND MMAI_LIBS "${ACCELERATE}")
   elseif(ANDROID)
-    list(APPEND MMAI_LIBS c++_static)
+    list(APPEND MMAI_LIBS c++_shared)
   endif()
 
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
